tests/NormalTests/paczka2/big_fuzzy/33327182.err
Error in line 1: VWVW A769 34,8
Error in line 6: VWVW S492 49,2
Error in line 2: sgLtcIY S142 70,8
Error in line 29: rFa1EahIP A924 58,5
Error in line 40: FeZhO9sC A769 49,5
Error in line 41: A924 A924 34,3
Error in line 51: dYjb7pQ A924 37,7
Error in line 56: dYjb7pQ S49u 18,5
Error in line 68: sgLtcIY S492 46,0
Error in line 77: rFa1EahIP S142 -2,7
Error in line 74: VWVW S142 19,5
Error in line 70: sgLtcIY A769 70,1
Error in line 87: FeZhO9sC S142 76,8
Error in line 55: dYjb7pQ S492 31,9
Error in line 103: rFa1EahIP S492 76,6
Error in line 117: FeZhO9s> S142 48,8
Error in line 101: VWVW A769 8,1
Error in line 119: VWVW S142 98,0
Error in line 110: rFa1EahIP S142 24,1
Error in line 127: rFa1EahIP A769 22,0
Error in line 131: FeZhO9sC S142 18,0
Error in line 137: dYjb7pQ S492 12,2
Error in line 116: FeZhO9sC A924 61,6
Error in line 145: FeZhO9sC S492 78,4
Error in line 142: sgLtcIY A769 52,7
Error in line 156: sgLtcIY S492 12,6
Error in line 147: FeZhO9sC S142 92,4
Error in line 158: VWVW A924 70,3
Error in line 168: A924 S142 6,6
Error in line 169: A924 S492 20,8
Error in line 171: FeZhO9sC S492 65,7
Error in line 173: FeZhO9sC S142 86,4
Error in line 180: FeZhO9sC S492 78,0
Error in line 185: rFa1EahIP S142 33,2
Error in line 194: rFa1EahIP S492 61,7
Error in line 213: FeZhO9sC A924 22,9
Error in line 223: rFa1EahIP A924 10,8
Error in line 232: 1UuVFa A924 -1,9
Error in line 203: sgLtcIY S142 96,0
Error in line 226: 1UuVFa A924 2,8
Error in line 240: sgLtcIY S142 61,5
Error in line 241: 1UuVFa S492 39,5
